# litestar-mcve

./: .gitignore  README.md  app.py  piccolo_conf.py  pyproject.toml
home/: endpoints.py
