[tool.poetry]
name = "litestar mcve"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.13.0"
uvicorn = "^0.34.0"
piccolo-admin = "^1.9.0"
piccolo = {extras = ["all"], version = "^1.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
